----

Welcome to schroot 1.3.0.  Please read these release notes carefully.

Full installation instructions are provided in the INSTALL file.  The
README file also contains more specific notes regarding building and
configuration.

* Major changes in 1.3.0:

  1) Exec scripts have been removed.  Unlike setup scripts, these
     scripts were never used, and there are no known uses for them.
     Removing them will improve the performance of schroot.

* Major changes in 1.2.1:

  1) A new chroot type, "loopback", has been added.  This is similar
     to the "block-device" type, but allows for loopback mounting of
     filesystems contained within regular files.

  2) "lvm-snapshot" chroot types now clean up correctly in the case of
     failures during setup.

* Major changes in 1.2.0:

  1) In addition to /etc/schroot/schroot.conf, chroot definitions may
     be placed in separate files under /etc/schroot/chroot.d to enable
     packages and system administrators to easily make new chroots
     available to schroot.

  2) Configuration files may now be symlinks as well as regular files.

  3) schroot now builds with GCC 4.3.

  4) All setup and exec scripts source and use the script
     configuration file specified with the script-config configuration
     key.

* Major changes in 1.1.6:

  1) Relicence under the GNU General Public License, version 3 or
     later.

  2) Per-chroot custom mountpoints are now possible through the use of
     an fstab file.  This may be used to mount or bind mount any
     filesystem within the chroot with the assistance of a helper
     utility, schroot-mount.  Set FSTAB=fstab in the script-config
     file to specify which file to use.

  3) Per-chroot custom file copying is now supported.  Set
     COPYFILES=file in the script-config file to specify a file
     containing a list of files to copy from the host system into the
     chroot.  This change merged the 20network and 30passwd setup