@@ -31,7 +31,6 @@
 #mount-options=-o atime,sync,user_xattr
 #lvm-snapshot-options=--size 2G
 #run-setup-scripts=true
-#run-exec-scripts=true
 #
 #[squeeze]
 #description=Debian squeeze (stable) 32-bit
@@ -40,7 +39,6 @@
 #groups=sbuild-security
 #aliases=stable
 #run-setup-scripts=false
-#run-exec-scripts=false
 #personality=linux32
 #
 #[lenny]
@@ -73,4 +71,3 @@
 #mount-options=-o atime,sync,user_xattr
 #location=/experimental
 #run-setup-scripts=true
-#run-exec-scripts=true
