@@ -18,12 +18,11 @@
 .SH NAME
 schroot\-setup \- schroot chroot setup scripts
 .SH DESCRIPTION
-\fBschroot\fP uses scripts to set up and then clean up the chroot
-environment.  The directories \f[BI]@SCHROOT_CONF_SETUP_D@\fP and
-\f[BI]@SCHROOT_CONF_EXEC_D@\fP contain scripts run when a chroot is created and
-destroyed, and entered and left, respectively.  Several environment variables
-are set while the scripts are being run, which allows their behaviour to be
-customised, depending upon, for example, the type of chroot in use.
+\fBschroot\fP uses scripts to set up and then clean up the chroot environment.
+The directory \f[BI]@SCHROOT_CONF_SETUP_D@\fP contains scripts run when a
+chroot is created and destroyed.  Several environment variables are set while
+the scripts are being run, which allows their behaviour to be customised,
+depending upon, for example, the type of chroot in use.
 .PP
 The scripts are run in name order, like those run by
 .BR init (8),
@@ -35,13 +34,9 @@ The setup scripts are all invoked with two options:
 The action to perform.
 .IP
 When a session is first started, the chroot is set up by running the scripts in
-@SCHROOT_CONF_SETUP_D@ with the \[oq]setup\-start\[cq] option.  When a command
-or shell is run in the configured chroot, the scripts in
-\fI@SCHROOT_CONF_EXEC_D@\fP are run with the \[oq]exec\-start\[cq] option.
-After the command or command has completed, the scripts are run in reverse
-order with the \[oq]exec\-stop\[cq] option.  Finally, when the session is
-ended, the scripts in \fI@SCHROOT_CONF_SETUP_D@\fP are run in reverse order
-with the \[oq]setup\-stop\[cq] option.
+@SCHROOT_CONF_SETUP_D@ with the \[oq]setup\-start\[cq] option.  When the
+session is ended, the scripts in \fI@SCHROOT_CONF_SETUP_D@\fP are run in
+reverse order with the \[oq]setup\-stop\[cq] option.
 .IP 2
 The chroot status.
 .IP
@@ -50,8 +45,8 @@ something went wrong.  For example, particular actions may be skipped on
 failure.
 .PP
 Note that the scripts should be \fIidempotent\fP.  They \fBmust\fP be
-idempotent during the \[oq]exec\-stop\[cq] and \[oq]setup\-stop\[cq] phases,
-because they may be run more than once.
+idempotent during the \[oq]setup\-stop\[cq] phase, because they may be run more
+than once, for example on failure.
 .SH ENVIRONMENT
 .SS General variables
 .TP
@@ -181,11 +176,6 @@ If
 .BR sbuild (1)
 is installed, set up the build directories, including ownership and
 permissions, inside the chroot for use by sbuild.
-.SS \f[BI]@SCHROOT_CONF_EXEC_D@\fP
-The system-wide chroot execution directory
-.TP
-\f[BI]00check\fP
-Print debugging diagnostics and perform basic sanity checking.
 .SH AUTHORS
 Roger Leigh.
 .SH COPYRIGHT
